2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincModel.cs:
	* ZincSolveType.cs:
	* ZincAnnotation.cs:
	* ZincVarDeclItem.cs:
	* ZincIncludeItem.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincModel.cs:
	* IZincItem.cs:
	* ZincIncludeItem.cs:
	* ZincVarDeclItem.cs:
	* ZincAnnotationItem.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincData.cs:
	* ZincIdent.cs:
	* ZincVarPar.cs:
	* IZincIdentBox.cs:
	* ZincPrintUtils.cs:
	* ZincExpression.cs:
	* ZincIncludeItem.cs:
	* ZincIdentBoxBase.cs:
	* ZincAnnotationItem.cs:
	* IZincIdentContainer.cs:
	* ZincTypeInstExpression.cs:
	* IZincIdentReplaceContainer.cs:
	* ZincTypeInstExpressionIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* ZincExpression.cs:
	* ZincIdentBoxBase.cs:
	* IZincIdentContainer.cs:
	* ZincTypeInstExpression.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdentBoxBase.cs:
	* ZincTypeInstExpression.cs:
	* TypeInstExpressionIdent.cs:
	* ZincTypeInstExpressionIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdentBoxBase.cs:
	* ZincAnnotationItem.cs:
	* ZincTypeInstExpression.cs:
	* TypeInstExpressionIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* ZincIdentBoxBase.cs:
	* IZincIdentContainer.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincIdent.cs:
	* IZincIdentBox.cs:
	* ZincIdentBoxBase.cs:
	* ZincIdentContainer.cs:
	* IZincIdentContainer.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* HeadTail.cs:
	* IZincItem.cs:
	* ZincIdent.cs:
	* ZincItemType.cs:
	* IZincIdentBox.cs:
	* ZincPrintUtils.cs:
	* ZincIncludeItem.cs:
	* ZincIdentBoxBase.cs:
	* ZincAnnotationItem.cs:
	* ZincIdentContainer.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincData.cs:
	* ZincItem.cs:
	* ZincType.cs:
	* HeadTail.cs:
	* ZincIName.cs:
	* IZincItem.cs:
	* ZincModel.cs: