@@ -1,3 +1,9 @@
+2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* ZincScalar.cs:
+	* ZincSolveType.cs:
+	* ZincPrintUtils.cs: 
+
 2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* ZincModel.cs:
